--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "vueadmin",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "vue admin project",
-  "author": "taylor <1151324240@qq.com>",
-  "license": "MIT",
+  "author": "sczhaoqi <1151324240@qq.com>",
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
